--- a/Core.DALC/QOfreces.WPF/Administrador.xaml
+++ b/Core.DALC/QOfreces.WPF/Administrador.xaml
@@ -8,6 +8,9 @@
         xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
+        Icon="img/logo.png"
+        BorderBrush="{DynamicResource AccentColorBrush}"
+        BorderThickness="1"
         Title="Administrador de sistema" Height="396.226" Width="728.84" Background="Gainsboro">
     <Grid Margin="0,0,2,0">
         <Controls:Tile x:Name="tiRubro" Margin="557.5,53,-5.5,176" TitleFontSize="12" Title="Mantenedor Rubro" Click="tiRubro_Click">
