--- a/Core.DALC/QOfreces.WPF/MantenedorRubro.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorRubro.xaml
@@ -1,11 +1,17 @@
-﻿<Window x:Class="QOfreces.WPF.MantenedorRubro"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.MantenedorRubro"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         xmlns:local="clr-namespace:QOfreces.WPF"
         mc:Ignorable="d"
-        Title="MantenedorRubro" Height="300" Width="514.04">
+        Icon="img/logo.png"
+        BorderBrush="{DynamicResource AccentColorBrush}"
+        BorderThickness="1"
+        Title="MantenedorRubro" Height="300" Width="514.04" Background="Gainsboro">
     <Grid>
         <Label x:Name="label" Content="Tipo Rubro&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,35,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label1" Content="Descripción&#xD;&#xA;" HorizontalAlignment="Left" Margin="10,66,0,0" VerticalAlignment="Top"/>
@@ -18,4 +24,4 @@
         <TextBox x:Name="txtElim" HorizontalAlignment="Left" Height="23" Margin="243,168,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
