--- a/Core.DALC/QOfreces.WPF/MantenedorUsuarios.xaml
+++ b/Core.DALC/QOfreces.WPF/MantenedorUsuarios.xaml
@@ -1,11 +1,17 @@
-﻿<Window x:Class="QOfreces.WPF.MantenedorUsuarios"
+﻿<Controls:MetroWindow x:Class="QOfreces.WPF.MantenedorUsuarios"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:QOfreces.WPF"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:behaviours="clr-namespace:MahApps.Metro.Behaviours;assembly=MahApps.Metro"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
-        Title="MantenedorUsuarios" Height="300" Width="623.077">
+        Icon="img/logo.png"
+        BorderBrush="{DynamicResource AccentColorBrush}"
+        BorderThickness="1"
+        Title="MantenedorUsuarios" Height="300" Width="623.077" Background="Gainsboro">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="106*"/>
@@ -71,4 +77,4 @@
         </Grid>
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
