--- a/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
+++ b/Core.DALC/QOfreces.WPF/EncargadoTienda.xaml
@@ -28,7 +28,7 @@
         </Controls:Tile>
         <Controls:Flyout x:Name="FlyPublicar" Position="Right" Opacity="0.9" Background="#FF979797" Foreground="White" Width="407" Header="Publicar Oferta">
             <Grid HorizontalAlignment="Left" Height="278" Margin="10,0,0,0" Width="387">
-                <DataGrid x:Name="dataGridOfertas"  HorizontalAlignment="Left" Margin="10,68,0,0" VerticalAlignment="Top" Height="168" Width="367" AutoGenerateColumns="False" >
+                <DataGrid x:Name="dataGridOfertas" CanUserAddRows="False" HorizontalAlignment="Left" Margin="10,68,0,0" VerticalAlignment="Top" Height="168" Width="367" AutoGenerateColumns="False" >
                     <DataGrid.Columns>
                         <DataGridCheckBoxColumn x:Name="Selecionar" Header="Seleccionar" Binding="{Binding Selec}" />
                         <DataGridTextColumn Header="Nombre" Binding="{Binding Nombre}" />
@@ -45,7 +45,7 @@
             <Grid Height="254" Margin="82,0,10,0">
                 <Button x:Name="btnBuscar" Content="Buscar" HorizontalAlignment="Left" Margin="191,10,0,0" VerticalAlignment="Top" Width="75" Click="btnBuscar_Click"/>
                 <TextBox x:Name="txtBuscar"   HorizontalAlignment="Left" Height="23" Margin="66,10,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="120"/>
-                <DataGrid x:Name="dataGridOferta"  HorizontalAlignment="Left" Margin="-67,42,0,0" VerticalAlignment="Top" Height="168" Width="342" AutoGenerateColumns="False" >
+                <DataGrid x:Name="dataGridOferta" CanUserAddRows="False"  HorizontalAlignment="Left" Margin="-67,42,0,0" VerticalAlignment="Top" Height="168" Width="342" AutoGenerateColumns="False" >
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Id Oferta" Binding="{Binding IdOferta}" />
                         <DataGridTextColumn Header="Nombre Oferta" Binding="{Binding Nombre}" />
