--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -11,14 +11,14 @@
         Icon="img/logo.png"
         BorderBrush="{DynamicResource AccentColorBrush}"
         BorderThickness="1"
-        Title="Generar Oferta" Height="692.548" Width="754.078" Background="Gainsboro">
+        Title="Generar Oferta" Height="692.548" Width="897.078" Background="Gainsboro">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="466*"/>
-            <ColumnDefinition Width="443*"/>
+            <ColumnDefinition Width="470*"/>
+            <ColumnDefinition Width="417*"/>
         </Grid.ColumnDefinitions>
-        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="46,594,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" Grid.Column="1" BorderBrush="Black"/>
-        <DataGrid x:Name="dgProd" CanUserAddRows="False" HorizontalAlignment="Left" Margin="29,20,0,0" VerticalAlignment="Top" Height="221" Width="574"  AutoGenerateColumns="false" Grid.ColumnSpan="2">
+        <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="30,586,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" BorderBrush="Black" Height="27" Grid.Column="1"/>
+        <DataGrid x:Name="dgProd" CanUserAddRows="False" HorizontalAlignment="Left" Margin="29,20,0,0" VerticalAlignment="Top" Height="221" Width="692"  AutoGenerateColumns="false" Grid.ColumnSpan="2">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id Producto" Binding="{Binding IdProducto}" />
                 <DataGridTextColumn Header="SKU" Binding="{Binding Sku}" />
@@ -28,22 +28,34 @@
                 <DataGridCheckBoxColumn x:Name="Selecionar" Header="Seleccionar" Binding="{Binding Selec}" />
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="226,46,0,0" VerticalAlignment="Top" Width="128" Click="btnListar_Click" Grid.Column="1" BorderBrush="Black"/>
-        <Label Content="Nombre Oferta" HorizontalAlignment="Left" Margin="29,272,0,0" VerticalAlignment="Top" Width="137"/>
-        <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,315,0,0" VerticalAlignment="Top"/>
-        <Label Content="Ingrese Fecha" HorizontalAlignment="Left" Margin="29,357,0,0" VerticalAlignment="Top"/>
-        <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,532,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.423"/>
-        <Label Content="Adjuntar Imagen" HorizontalAlignment="Left" Margin="29,384,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="23" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
-        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="23" Margin="149,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
-        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,532,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="181" BorderBrush="Black"/>
-        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,357,0,0" VerticalAlignment="Top" BorderBrush="Black"/>
-        <Label Content="Min Pdocuctos" HorizontalAlignment="Left" Margin="304,272,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black"/>
-        <Label Content="Max Productos" HorizontalAlignment="Left" Margin="304,315,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2"/>
-        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="33,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black"/>
-        <Button x:Name="btnAdjuntar" Content="Adjuntar" HorizontalAlignment="Left" Margin="264,450,0,0" VerticalAlignment="Top" Width="75" Click="btnAdjuntar_Click" BorderBrush="Black"/>
-        <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="100" Margin="149,409,0,0" VerticalAlignment="Top" Width="100"/>
-        <TextBox x:Name="txtBuscarProducto" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar producto" Grid.Column="1" HorizontalAlignment="Left" Height="23" Margin="226,20,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="128" BorderBrush="Black"/>
+        <Button x:Name="btnListar" Content="Listar Productos" HorizontalAlignment="Left" Margin="280,123,0,0" VerticalAlignment="Top" Width="128" Click="btnListar_Click" Grid.Column="1" BorderBrush="Black" Height="27"/>
+        <Label Content="Nombre Oferta" HorizontalAlignment="Left" Margin="29,272,0,0" VerticalAlignment="Top" Width="137" Height="26"/>
+        <Label Content="Precio Oferta" HorizontalAlignment="Left" Margin="29,303,0,0" VerticalAlignment="Top" Height="26" Width="79"/>
+        <Label Content="Fecha Oferta" HorizontalAlignment="Left" Margin="29,369,0,0" VerticalAlignment="Top" Height="26" Width="77"/>
+        <Label Content="Descripcion Oferta" HorizontalAlignment="Left" Margin="29,532,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.528,2.423" Height="26" Width="108"/>
+        <TextBox x:Name="txtNombre" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa el nombre" HorizontalAlignment="Left" Height="26" Margin="149,272,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
+        <TextBox x:Name="txtPrecio" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Ingresa precio" HorizontalAlignment="Left" Height="26" Margin="149,303,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
+        <TextBox x:Name="txtDescOf" Controls:TextBoxHelper.ClearTextButton="True" HorizontalAlignment="Left" Height="101" Margin="149,532,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143" BorderBrush="Black"/>
+        <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,369,0,0" VerticalAlignment="Top" BorderBrush="Black" Height="26" Width="143"/>
+        <Label Content="Minimo Productos" HorizontalAlignment="Left" Margin="351,272,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" HorizontalAlignment="Left" Height="26" Margin="30,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
+        <Label Content="Máximo Productos" HorizontalAlignment="Left" Margin="351,311,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" HorizontalAlignment="Left" Height="26" Margin="30,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
+        <Button x:Name="btnAdjuntar" Content="Adjuntar&#xD;&#xA;Imagen" HorizontalAlignment="Left" Margin="24,437,0,0" VerticalAlignment="Top" Width="104" Click="btnAdjuntar_Click" BorderBrush="Black" Height="41"/>
+        <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="100" Margin="149,407,0,0" VerticalAlignment="Top" Width="143"/>
+        <TextBox x:Name="txtBuscarProducto" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar producto" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="280,81,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="128" BorderBrush="Black"/>
+        <Label Content="Precio Anterior" HorizontalAlignment="Left" Margin="29,338,0,0" VerticalAlignment="Top" Width="99" Height="26"/>
+        <TextBox x:Name="txtPrecioAntes" HorizontalAlignment="Left" Height="26" Margin="149,338,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
+        <CheckBox x:Name="chPubOf" Content="Publicar Oferta" HorizontalAlignment="Left" Margin="227,381,0,0" VerticalAlignment="Top" Width="122" Grid.Column="1" Height="18"/>
+        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="30,355,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
+        <Label Content="Sucursal" HorizontalAlignment="Left" Margin="351,351,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <Label Content="Categoria Oferta" HorizontalAlignment="Left" Margin="351,389,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <ComboBox HorizontalAlignment="Left" Margin="30,389,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
+        <Label Content="Región" HorizontalAlignment="Left" Margin="351,437,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <Label Content="Comuna" HorizontalAlignment="Left" Margin="351,489,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <ComboBox HorizontalAlignment="Left" Margin="30,437,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
+        <ComboBox HorizontalAlignment="Left" Margin="30,493,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
+        <Button x:Name="btnVolver" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="176,586,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="btnSalir" Content="SALIR" Grid.Column="1" HorizontalAlignment="Left" Margin="274,586,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
 </Controls:MetroWindow>
