--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -20,11 +20,11 @@
         <Button x:Name="btnGenOferta" Content="Generar Oferta" HorizontalAlignment="Left" Margin="30,586,0,0" VerticalAlignment="Top" Width="128" Click="btnGenOferta_Click" BorderBrush="Black" Height="27" Grid.Column="1"/>
         <DataGrid x:Name="dgProd" CanUserAddRows="False" HorizontalAlignment="Left" Margin="29,20,0,0" VerticalAlignment="Top" Height="221" Width="692"  AutoGenerateColumns="false" Grid.ColumnSpan="2">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Id Producto" Binding="{Binding IdProducto}" />
-                <DataGridTextColumn Header="SKU" Binding="{Binding Sku}" />
-                <DataGridTextColumn Header="Nombre Producto" Binding="{Binding Nombre}" />
-                <DataGridTextColumn Header="Precio " Binding="{Binding Precio}" />
-                <DataGridTextColumn Header="Codigo Interno " Binding="{Binding CodigoInterno}" />
+                <DataGridTextColumn Header="Id Producto" Binding="{Binding IdProducto}" IsReadOnly="True" />
+                <DataGridTextColumn Header="SKU" Binding="{Binding Sku}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Nombre Producto" Binding="{Binding Nombre}" IsReadOnly="True" />
+                <DataGridTextColumn Header="Precio " Binding="{Binding Precio}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Codigo Interno " Binding="{Binding CodigoInterno}" IsReadOnly="True"/>
                 <DataGridCheckBoxColumn x:Name="Selecionar" Header="Seleccionar" Binding="{Binding Selec}" />
             </DataGrid.Columns>
         </DataGrid>
@@ -39,22 +39,18 @@
         <DatePicker x:Name="dpFecha" HorizontalAlignment="Left" Margin="149,369,0,0" VerticalAlignment="Top" BorderBrush="Black" Height="26" Width="143"/>
         <Label Content="Minimo Productos" HorizontalAlignment="Left" Margin="351,272,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
         <TextBox x:Name="txtMinProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad minima" HorizontalAlignment="Left" Height="26" Margin="30,271,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
-        <Label Content="Máximo Productos" HorizontalAlignment="Left" Margin="351,311,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" HorizontalAlignment="Left" Height="26" Margin="30,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
+        <Label Content="Máximo Productos" HorizontalAlignment="Left" Margin="351,324,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <TextBox x:Name="txtMaxProd" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Cantidad maxima" HorizontalAlignment="Left" Height="26" Margin="30,325,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" BorderBrush="Black" Grid.Column="1"/>
         <Button x:Name="btnAdjuntar" Content="Adjuntar&#xD;&#xA;Imagen" HorizontalAlignment="Left" Margin="24,437,0,0" VerticalAlignment="Top" Width="104" Click="btnAdjuntar_Click" BorderBrush="Black" Height="41"/>
         <Image x:Name="imgFoto" HorizontalAlignment="Left" Height="100" Margin="149,407,0,0" VerticalAlignment="Top" Width="143"/>
         <TextBox x:Name="txtBuscarProducto" Controls:TextBoxHelper.ClearTextButton="True" Controls:TextBoxHelper.Watermark="Buscar producto" Grid.Column="1" HorizontalAlignment="Left" Height="26" Margin="280,81,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="128" BorderBrush="Black"/>
         <Label Content="Precio Anterior" HorizontalAlignment="Left" Margin="29,338,0,0" VerticalAlignment="Top" Width="99" Height="26"/>
         <TextBox x:Name="txtPrecioAntes" HorizontalAlignment="Left" Height="26" Margin="149,338,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="143"/>
         <CheckBox x:Name="chPubOf" Content="Publicar Oferta" HorizontalAlignment="Left" Margin="227,381,0,0" VerticalAlignment="Top" Width="122" Grid.Column="1" Height="18"/>
-        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="30,355,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
-        <Label Content="Sucursal" HorizontalAlignment="Left" Margin="351,351,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <Label Content="Categoria Oferta" HorizontalAlignment="Left" Margin="351,389,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <ComboBox HorizontalAlignment="Left" Margin="30,389,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
-        <Label Content="Región" HorizontalAlignment="Left" Margin="351,437,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <Label Content="Comuna" HorizontalAlignment="Left" Margin="351,489,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
-        <ComboBox HorizontalAlignment="Left" Margin="30,437,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
-        <ComboBox HorizontalAlignment="Left" Margin="30,493,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
+        <ComboBox x:Name="cbSucursal" HorizontalAlignment="Left" Margin="30,386,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
+        <Label Content="Sucursal" HorizontalAlignment="Left" Margin="351,386,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <Label Content="Categoria Oferta" HorizontalAlignment="Left" Margin="351,452,0,0" VerticalAlignment="Top" Width="113" Height="26"/>
+        <ComboBox x:Name="cbCatOf" HorizontalAlignment="Left" Margin="30,452,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
         <Button x:Name="btnVolver" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="176,586,0,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="btnSalir" Content="SALIR" Grid.Column="1" HorizontalAlignment="Left" Margin="274,586,0,0" VerticalAlignment="Top" Width="75"/>
     </Grid>
