--- a/Core.DALC/QOfreces.WPF/PublicaOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/PublicaOferta.xaml
@@ -22,6 +22,7 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button x:Name="btnPublicar" Content="PUBLICAR &#xD;&#xA;OFERTA" HorizontalAlignment="Left" Margin="303,281,0,0" VerticalAlignment="Top" Width="75" Click="btnPublicar_Click" />
+        <DataGrid HorizontalAlignment="Left" Margin="547,201,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
