--- a/Core.DALC/QOfreces.WPF/Administrador.xaml
+++ b/Core.DALC/QOfreces.WPF/Administrador.xaml
@@ -26,6 +26,7 @@
             <Image x:Name="image3" Height="100" Width="100" Stretch="Fill" Source="img/MantenedorProducto.png"/>
         </Controls:Tile>
         <Button x:Name="btnSalir" Content="Salir" HorizontalAlignment="Left" Margin="636,243,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
+        <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="458,243,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
 
     </Grid>
 </Controls:MetroWindow>
