--- a/Core.DALC/QOfreces.WPF/GenOferta.xaml
+++ b/Core.DALC/QOfreces.WPF/GenOferta.xaml
@@ -53,5 +53,6 @@
         <ComboBox x:Name="cbCatOf" HorizontalAlignment="Left" Margin="30,452,0,0" VerticalAlignment="Top" Width="141" Grid.Column="1" Height="22"/>
         <Button x:Name="btnVolver" Content="Volver" Grid.Column="1" HorizontalAlignment="Left" Margin="176,586,0,0" VerticalAlignment="Top" Width="75" Click="btnVolver_Click"/>
         <Button x:Name="btnSalir" Content="SALIR" Grid.Column="1" HorizontalAlignment="Left" Margin="274,586,0,0" VerticalAlignment="Top" Width="75" Click="btnSalir_Click"/>
+        <Button Content="EXPORTAR PDF" Grid.Column="1" HorizontalAlignment="Left" Margin="138,83,0,0" VerticalAlignment="Top" Width="128" Click="Button_Click"/>
     </Grid>
 </Controls:MetroWindow>
